--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8080
 
+spring.web.cors.enabled=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ds
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.mapping-resources=
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
