--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,15 +18,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+
 		
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
+		    <groupId>com.warrenstrange</groupId>
+		    <artifactId>googleauth</artifactId>
+		    <version>1.4.0</version> <!-- Use the latest version -->
 		</dependency>
 		
 		<dependency>
@@ -96,6 +93,18 @@
 		   <groupId>io.springfox</groupId>
 		   <artifactId>springfox-swagger2</artifactId>
 		   <version>2.7.0</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>dev.samstevens.totp</groupId>
+		  <artifactId>totp</artifactId>
+		  <version>1.7.1</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>commons-net</groupId>
+		  <artifactId>commons-net</artifactId>
+		  <version>3.6</version>
 		</dependency>
 
 	</dependencies>
