--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=8080
 
 spring.web.cors.enabled=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ds
+spring.datasource.url=jdbc:mysql://localhost:3306/yummy_hub
 spring.datasource.username=root
 spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.mapping-resources=
+spring.jpa.mapping-resources=Districts.hbm.xml,Favourite.hbm.xml,Orderitem.hbm.xml,Orders.hbm.xml,Product.hbm.xml,Provinces.hbm.xml,Review.hbm.xml,Store.hbm.xml,Subdistricts.hbm.xml,Type.hbm.xml,User.hbm.xml
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
