--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,13 +18,6 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
-		
-		<dependency>
-		    <groupId>com.warrenstrange</groupId>
-		    <artifactId>googleauth</artifactId>
-		    <version>1.4.0</version> <!-- Use the latest version -->
-		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -105,6 +98,17 @@
 		  <groupId>commons-net</groupId>
 		  <artifactId>commons-net</artifactId>
 		  <version>3.6</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
