--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.mapping-resources=Districts.hbm.xml,Favourite.hbm.xml,Orderitem.hbm.xml,Orders.hbm.xml,Product.hbm.xml,Provinces.hbm.xml,Review.hbm.xml,Store.hbm.xml,Subdistricts.hbm.xml,Type.hbm.xml,User.hbm.xml
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+secret.pepper=ILzwnx/f2+JBioRB8ZDdSZmMRNewwSsc8sRob9G8mBU=
+secret.key=2a3093f4d8afbc28e5396b85287e6082
