--- a/server/pom.xml
+++ b/server/pom.xml
@@ -110,6 +110,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcprov-jdk15on</artifactId>
+		    <version>1.68</version> <!-- Use the latest version -->
+		</dependency>
 
 	</dependencies>
 
