--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.58",
+    "@types/node-forge": "^1.3.7",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
+    "axios": "^1.5.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
