--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
