--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_SECRET_KEY=3AFCDD20C1F4A07C9F93568AAF9F0582
-REACT_APP_API_URL=http://localhost:8080/api
+REACT_APP_API_URL=http://localhost:8080/server/api
 REACT_APP_DEBUG=true
