--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/crypto-js": "^4.1.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.58",
     "@types/node-forge": "^1.3.7",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
+    "@types/react-native-crypto-js": "^1.0.1",
     "axios": "^1.5.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
