--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/crypto-js": "^4.1.2",
     "@types/jest": "^27.5.2",
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "^16.18.58",
     "@types/node-forge": "^1.3.7",
     "@types/react": "^18.2.25",
@@ -24,6 +25,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
