--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@mui/joy": "^5.0.0-beta.11",
     "@mui/material": "^5.14.13",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
