--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 secret.pepper=ILzwnx/f2+JBioRB8ZDdSZmMRNewwSsc8sRob9G8mBU=
 secret.frontkey=4Pz+k9qSJBujdyz8Wk+TtN1jbZeesp2vRCbzgdehkt4=
 secret.backkey=A0C4DF37E985BAC791B1018AB6F7F915
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
