--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 REACT_APP_API_SECRET_KEY=4Pz+k9qSJBujdyz8Wk+TtN1jbZeesp2vRCbzgdehkt4=
 REACT_APP_API_URL=http://localhost:8080/server/api
 REACT_APP_DEBUG=true
+GENERATE_SOURCEMAP=false
