--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
+    "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +34,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^4.0.1",
     "sweetalert2": "^11.7.32",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
