--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/react-native-crypto-js": "^1.0.1",
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "html5-qrcode": "^2.3.8",
